--- a/SocialNetwork/Views/Home/Index.cshtml
+++ b/SocialNetwork/Views/Home/Index.cshtml
@@ -10,8 +10,7 @@
 
 
     <div class="main">
-        блок регистрации
-        блок авторизации
+    <partial name="Register" />
     </div>
 
 </div>
