--- a/SocialNetwork/Views/Shared/Register.cshtml
+++ b/SocialNetwork/Views/Shared/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AwesomeNetwork.ViewModels.Account.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    //ViewData["Title"] = "Register";
 }
 
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
